fix: scope project modal texture and align project page header texture

--- a/src/styles/scss/_projects.scss
+++ b/src/styles/scss/_projects.scss
@@ -19,6 +19,16 @@
   margin-bottom: 3rem;
 }
 
+#selected-works {
+  scroll-margin-top: 112px;
+}
+
+@media (max-width: 767px) {
+  #selected-works {
+    scroll-margin-top: 96px;
+  }
+}
+
 .link {
   position: relative;
   color: $color;
@@ -228,7 +238,7 @@
   // Noise effect on the body
   &::before {
     content: "";
-    position: fixed;
+    position: absolute;
     inset: 0;
     z-index: 0;
     pointer-events: none;
@@ -457,7 +467,10 @@
   top: 0;
   z-index: 10;
   padding: 1rem 1.5rem;
-  background: $background-color;
+  background-color: $background-color;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='400' height='400'><filter id='noiseFilter'><feTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/><feColorMatrix type='saturate' values='0'/></filter><rect width='100%' height='100%' filter='url(%23noiseFilter)'/></svg>");
+  background-blend-mode: multiply;
+  background-size: 400px 400px;
   border-bottom: 0.5px solid $color;
   display: flex;
   align-items: center;
